--- a/docs/自动拆箱装箱语法糖.md
+++ b/docs/自动拆箱装箱语法糖.md
@@ -1,7 +1,7 @@
 # java基础类型的装箱拆箱
 > 通过本文能了解哪些知识？
->> - 为什么基本数据类型拆箱有可能会报空指针异常？
->> - 基本数据类型的装箱与拆箱操作是如何实现的？
+> - 为什么基本数据类型拆箱有可能会报空指针异常？
+> - 基本数据类型的装箱与拆箱操作是如何实现的？
 
 ## 自动拆箱
 首先我们有如下代码：
