--- a/docs/网络/跨域.md
+++ b/docs/网络/跨域.md
@@ -138,6 +138,8 @@ Method是下列之一:
 只要请求Method是上述之一，并且所有请求Header都是上述Header列表中的，就认为是简单请求（注意：Content-Type的值必须满足
 是`application/x-www-form-urlencoded`、`multipart/form-data`、`text/plain`其中之一，否则也会被认为是非简单请求）；
 
+## preflight请求流程图
+![preflight请求流程图](../../resource/Flowchart_showing_Simple_and_Preflight_XHR.svg "preflight请求流程图")
 
 # 参考
 [mozilla关于CORS的说明](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Access_control_CORS)
