--- a/docs/网络/跨域.md
+++ b/docs/网络/跨域.md
@@ -142,5 +142,5 @@ Method是下列之一:
 ![preflight请求流程图](../../resource/Flowchart_showing_Simple_and_Preflight_XHR.svg "preflight请求流程图")
 
 # 参考
-[mozilla关于CORS的说明](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Access_control_CORS)
-[维基百科关于CORS的说明](https://en.wikipedia.org/wiki/Same-origin_policy)
+- [mozilla关于CORS的说明](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Access_control_CORS)
+- [维基百科关于CORS的说明](https://en.wikipedia.org/wiki/Same-origin_policy)
