--- a/docs/网络/跨域.md
+++ b/docs/网络/跨域.md
@@ -139,7 +139,7 @@ Method是下列之一:
 是`application/x-www-form-urlencoded`、`multipart/form-data`、`text/plain`其中之一，否则也会被认为是非简单请求）；
 
 ## preflight请求流程图
-![preflight请求流程图](../../resource/Flowchart_showing_Simple_and_Preflight_XHR.svg "preflight请求流程图")
+![preflight请求流程图](../../resource/preflight请求流程图.jpeg "preflight请求流程图")
 
 # 参考
 - [mozilla关于CORS的说明](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Access_control_CORS)
