--- a/docs/java基础/自动拆箱装箱语法糖.md
+++ b/docs/java基础/自动拆箱装箱语法糖.md
@@ -102,3 +102,8 @@ Integer integer = Integer.valueOf(i);
 
 ## 结论
 最后，我们得到如下结论，对于基本数据类型的自动装箱操作，实际上是使用了`Integer.valueOf(int)`方法，而对于基本数据类型对应的包装类型的自动拆箱操作，则是使用了`Integer#intValue()`方法（注意，此方法是普通方法而不是静态方法），所以当对应的`Integer`对象为null时对其进行自动拆箱操作就会有空指针风险；
+
+# 关于作者
+- 微信：qiao1213812243
+- 微信公众号：java初学者
+- GitHub首页:https://github.com/JoeKerouac
