--- a/docs/网络/跨域.md
+++ b/docs/网络/跨域.md
@@ -7,7 +7,7 @@
 
 更多详细信息可以百度、Google查询。
 
-# 跨域控制请求头
+# 跨域控制请求头详解
 ## Access-Control-Allow-Origin
 ### 语法
 ```
@@ -144,3 +144,8 @@ Method是下列之一:
 # 参考
 - [mozilla关于CORS的说明](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Access_control_CORS)
 - [维基百科关于CORS的说明](https://en.wikipedia.org/wiki/Same-origin_policy)
+
+# 关于作者
+- 微信：qiao1213812243
+- 微信公众号：java初学者
+- GitHub首页:https://github.com/JoeKerouac
