--- a/docs/c语言/结构体.md
+++ b/docs/c语言/结构体.md
@@ -21,9 +21,9 @@ struct user{
 ```
 上述结构体内存结构如下：
 
-| 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| a | | | | b | b | b | b | c | | | |
+| 内存地址 | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 |
+| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
+| 存放数据 | a | | | | b | b | b | b | c | | | |
 
 首先起始位置是a的数据，然后因为后边b的大小是4位，所以这里除了a占一位外还要有三位空字节填充，然后是b的数据，然后是c的数据，根据规则一来
 判断前边b的长度是4位，c的长度是1位，满足条件，但是根据规则二来判断，整体长度是9位，不是最长的b的整数倍，所以这里要填充三位，所以该结构体
