--- a/docs/网络/netfilter实战项目/通过局域网中间人攻击学网络 序言.md
+++ b/docs/网络/netfilter实战项目/通过局域网中间人攻击学网络 序言.md
@@ -75,8 +75,8 @@ SMTP，POP3等；
 
 可能有的读者到这里要问了，这些我都知道啊，但是有什么用呢？是的，大多数计算机专业的对这个模型肯定不陌生，但是本文并不限定读者必须是计算机
 专业的，所以可能部分读者并不清楚该模型，而且相信即使是大多数计算机专业的，对该模型也不一定还记得那么清了，因为平时我们网络开发基本都是面
-向应用层开发的，多数应用开发者可能并不关注更下面的网络层和数据链路层，而本文后续编程更多则是面向网络层和数据链路层的开发，所以很有必要
-先补充下该分层模型；
+向应用层和传输层开发的，多数应用开发者可能并不关注更下面的网络层和数据链路层，而本文后续编程更多则是面向网络层和数据链路层的开发，所以很
+有必要先补充下该分层模型；
 
 ### 一个应用数据包（比如HTTP）在主机中的旅途
 以HTTP应用程序为例，一个应用数据包在主机中通过如下途径到达另外一个主机的应用中：
