--- a/docs/网络/netfilter实战项目/通过局域网中间人攻击学网络 序言.md
+++ b/docs/网络/netfilter实战项目/通过局域网中间人攻击学网络 序言.md
@@ -1,7 +1,7 @@
 # 通过局域网中间人攻击学网络 
 ## 序言
 ### 声明
-- 该文章为系列连载文章，由于作者目前工作较忙（懒），所以预期一周更新一篇；
+- 该文章为系列连载文章，由于作者目前工作较忙（懒），目前预期一周更新一篇；
 - 作者目前主要从事Java开发，所以后续涉及部分C代码的，可能会比较菜，不符合各种规范，请见谅；
 - 本系列文章仅供学习使用，请勿用作非法途径；
 - 想要深入交流或者吐槽作者的，可以加作者微信，作者微信：qiao1213812243；
@@ -33,12 +33,6 @@
 - JNI知识；
 
 ## 第一篇 实现局域网中间人攻击之基础篇
-### 如何实现中间人攻击
-想要实现中间人攻击，我们就要知道以下几个问题：
-- 互联网中不同主机是如何通信的？
-- 如何将局域网内其他客户端的网络请求拦截？
-- 拦截到其他客户端的请求报文后如何修改？
-
 ### 基础知识补充之OSI模型
 想要搞网络，搞中间人攻击，首先你要熟悉OSI模型，那么什么是OSI模型呢？OSI模型定义如下：
 ```
