--- a/docs/其他/资料.md
+++ b/docs/其他/资料.md
@@ -1,2 +1,3 @@
 - PSK算法说明：https://tools.ietf.org/html/rfc4279
 - JCA（Java加密算法相关）:https://docs.oracle.com/javase/8/docs/technotes/guides/security/crypto/CryptoSpec.html
+- 状态机相关文档：https://www.uml-diagrams.org/state-machine-diagrams.html
