--- a/docs/其他/资料.md
+++ b/docs/其他/资料.md
@@ -1,3 +1,4 @@
 - PSK算法说明：https://tools.ietf.org/html/rfc4279
 - JCA（Java加密算法相关）:https://docs.oracle.com/javase/8/docs/technotes/guides/security/crypto/CryptoSpec.html
 - 状态机相关文档：https://www.uml-diagrams.org/state-machine-diagrams.html
+- 对称加密相关：https://flylib.com/books/en/1.274.1/symmetric_key_cryptography.html
