--- a/docs/java基础/自动拆箱装箱语法糖.md
+++ b/docs/java基础/自动拆箱装箱语法糖.md
@@ -105,5 +105,5 @@ Integer integer = Integer.valueOf(i);
 
 # 关于作者
 - 微信：qiao1213812243
-- 微信公众号：java初学者
+- 微信公众号：代码深度研究院
 - GitHub首页:https://github.com/JoeKerouac
