更新文章，添加图片

--- a/docs/java基础/如何通过插件规范代码.md
+++ b/docs/java基础/如何通过插件规范代码.md
@@ -659,8 +659,10 @@ pom中添加以下内容：
 此时，打包会自动格式化代码，而当打包时添加了maven参数`-Prelease`时则会校验代码是否全部格式化；
 
 ### idea配置
-1、在idea的plugin marketplace中搜索`adapter for eclipse code formatter`，或者搜索`format`，第一个就是`adapter for eclipse code formatter`，安装，重启IDEA；
-2、打开idea配置，按照下图示意配置，其中Formatter.xml文件就是上边我们给出的那个文件，自己根据本地保存位置选择即可；
+- 1、在idea的plugin marketplace中搜索`adapter for eclipse code formatter`，或者搜索`format`，第一个就是`adapter for eclipse code formatter`，安装，重启IDEA；
+- 2、打开idea配置，按照下图示意配置，其中Formatter.xml文件就是上边我们给出的那个文件，自己根据本地保存位置选择即可；
+
+![微信公众号：代码深度研究院](../../resource/java基础/formatter插件配置.png)
 
 
 ## spotbug插件使用
