--- a/docs/操作系统/操作系统系列-序.md
+++ b/docs/操作系统/操作系统系列-序.md
@@ -27,7 +27,7 @@
 
 - 1、IPL是什么？IPL是initial program loader的缩写，即程序加载器，用于加载我们的操作系统，IPL只有512字节，实际操作系统不会这么小，根本装不进去，所以几乎所有操作系统都是把加载操作系统本身的程序放在启动区里的。有鉴于此，有时也会将启动区称为IPL；
 - 2、BIOS如何判断磁盘上是否有IPL？第一个问题中我们说了IPL，IPL只有512字节，在磁盘的第一个扇区，同时IPL还有一个规则，即最后两个字节必须以0x55、0xaa结束，这样BIOS就可以根据磁盘第一个扇区的最后这两个字节来判断该磁盘有没有IPL了；
-- 为什么是加载到0x7c00这个地址上？如果简单理解的话，可以认为这就是最早这么规定的，这个地址来自于Intel 8088芯片，后续为了兼容就都这么干了，深入了解的话，这个也是有历史背景的，不是随便就定的，1981年IBM最早的个人电脑上市，使用的就是这个Intel 8088芯片，当时搭载的操作系统是86-DOS、这个操作系统需要的内存最少是32KB，我们都知道内存地址是从0x00开始的，32KB的内存地址范围就是0x0000~0x7fff，8088芯片本身需要占用0x0000~0x03ff这段内存，用来保存各种中断程序的存储位置，所以内存就剩0x0400~0x7fff可用，为了把尽量多的连续内存分给操作系统，IPL就被放在了内存地址的尾部，由于IPL是512字节大小，IPL本身运行时也可能会产生数据，就为其也预留了512字节的内存，这样IPL加载的位置就在 0x7fff-512-512+1=0x7c00，这就是这个位置的由来；
+- 为什么是加载到0x7c00这个地址上？如果简单理解的话，可以认为这就是最早这么规定的，这个地址来自于Intel 8088芯片，后续为了兼容就都这么干了，深入了解的话，这个也是有历史背景的，不是随便就定的，1981年IBM最早的个人电脑上市，使用的就是这个Intel 8088芯片，当时搭载的操作系统是86-DOS、这个操作系统需要的内存最少是32KB，我们都知道内存地址是从0x00开始的，32KB的内存地址范围就是0x0000-0x7fff，8088芯片本身需要占用0x0000-0x03ff这段内存，用来保存各种中断程序的存储位置，所以内存就剩0x0400-0x7fff可用，为了把尽量多的连续内存分给操作系统，IPL就被放在了内存地址的尾部，由于IPL是512字节大小，IPL本身运行时也可能会产生数据，就为其也预留了512字节的内存，这样IPL加载的位置就在 0x7fff-512-512+1=0x7c00，这就是这个位置的由来；
 
 
 ## 小结
