--- a/docs/操作系统/保护模式.md
+++ b/docs/操作系统/保护模式.md
@@ -1,4 +1,4 @@
-# 保护模式保护了个啥
+# 揭秘保护模式：CPU如何筑起操作系统的安全防线
 
 在我们日常使用的操作系统中，处理器悄无声息地以一种称为“保护模式（Protected Mode）”的方式运行。这种模式自 80286 处理器起引入，是现代多任务、多用户操作系统的基石。但你是否思考过，它究竟“保护”了什么？又是如何实现保护的？
 
