--- a/docs/操作系统/内存管理.md
+++ b/docs/操作系统/内存管理.md
@@ -1,4 +1,4 @@
-# 深入理解操作系统内存管理机制：从实模式到保护模式的演进
+# 万字长文爆肝 | 1MB到4GB，一文带你看懂x86内存管理的技术革命
 
 > **技术说明**：
 > - 文中涉及的汇编代码采用AT&T汇编语法
@@ -443,10 +443,8 @@ TLB未命中： ~20-100 CPU周期（需访问页表）
 
 ---
 
-## 技术交流
+# 联系方式
 
-如果你对本文内容有任何疑问或想要进一步交流，欢迎通过以下方式联系：
-
-- **微信**：JoeKerouac
-- **微信公众号**：代码深度研究院
-- **GitHub**：[https://github.com/JoeKerouac](https://github.com/JoeKerouac)
+- 微信：JoeKerouac
+- 微信公众号：代码深度研究院（如搜不到可添加微信获取）
+- GitHub：[https://github.com/JoeKerouac](https://github.com/JoeKerouac)
